Tidy up recipe.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,10 +19,10 @@ build:
     - towncrier = towncrier:_main
 
 requirements:
-  build:
+  host:
+    - incremental
     - python
     - pip
-    - incremental
   run:
     - python
     - click
