--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,15 +22,14 @@ requirements:
   host:
     - incremental
     - pip
-    - python >=2.7
+    - python >=3.6
   run:
     - click
     - click-default-group
     - incremental
     - jinja2
-    - python >=2.7
-    - toml # [py<36]
-    - tomli # [py>=36]
+    - python >=3.6
+    - tomli
     - setuptools
 
 test:
