--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,8 @@ build:
 
 requirements:
   host:
-    - incremental
+    - incremental =22.10.0
+    - hatchling >=1.12.2,<2
     - pip
     - python >=3.7
   run:
